--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
 
       <div class="logo">
-        <h2><a href="index.html"> <img src="Blue skies con testo.png" width="300"></a></h2></div>
+        <h2><a href="index.html"> <img src="Blue skies con testo.png" width="300" alt="il logo della Blue Skies Big Band: un sole a forma di disco nascosto da una nuvola"></a></h2></div>
 
             <div class="topnav" id="myTopnav">   
             <a href="#home" class="active">Home</a>
@@ -59,7 +59,7 @@
 
 <div class="row">
     <div class="column">
-        <img src="Tromba.png" width="300px">
+        <img src="Tromba.png" width="300px"  alt="un giovane uomo adulto suona la tromba">
         <h3>Chi siamo?</h3>
         <hr>
         <br>
@@ -67,7 +67,7 @@
         <br>
         <div class="button-column"><button>Scopri le nostre attività</button></div></div>
     <div class="column">
-        <img src="pianola.png" width="300px">
+        <img src="pianola.png" width="300px" alt="un pianoforte elettrico sta venendo suonato da delle mani di un uomo adulto">
         <h3>Eventi</h3>
         <hr>
         <br>
@@ -80,7 +80,7 @@
 
 <div class="container reveal">
   <section>
-<div id="macchina"><img src="Blue skies come raggiungerci.png" style="height: 350px"></div>
+<div id="macchina"><h1><img src="Blue skies come raggiungerci.png" style="height: 350px" alt="Un disegno di un'automobile mentre si dirige. Gli alberi hanno la forma di contrabbasso e la strada assomiglia a un pianoforte"></h1></div>
   
 <h1>Attività e Prezzi</h1>
 <hr>
