--- a/Chi Siamo.html
+++ b/Chi Siamo.html
@@ -57,7 +57,7 @@
   <div class="row">
     <div class="column">
         <br>
-        <img src="Dizionario Jazz.png" width="300" margins="auto">
+        <img src="Dizionario Jazz.png" width="300" margins="auto" alt="un disegno di un grande libro stilizzato">
     </div>
     <div class="column">  <h2>Il corso</h2>
       <hr>
@@ -78,11 +78,11 @@
                 <h2>Guido Zanotti</h2>
                 <hr>
                 <br>
-                <p>Nato il 4/07/1975 è figlio d'arte del cantautore popolare bolognese Alfonso Zanotti, ha cominciato gli studi di musica a quattro anni e si è diplomato con lode in tromba al conservatorio "G.B. Martini" di Bologna e ha ottenuto una borsa di studio a Berkelee, dove ebbe occasione di imparare e apprezzare la musica jazz.</p>
+                <p>Nato il 4/07/1965 è figlio d'arte del cantautore popolare bolognese Alfonso Zanotti, ha cominciato gli studi di musica a quattro anni e si è diplomato con lode in tromba al conservatorio "G.B. Martini" di Bologna e ha ottenuto una borsa di studio a Berkelee, dove ebbe occasione di imparare e apprezzare la musica jazz.</p>
 <p>Dopo aver ottenuto l'abilitazione a insegnare. Ha insegnato sassofono al Conservatorio di Ferrara, il Liceo Musicale di Parma e la scuola di musica "Diapason" di Reggio Emilia.</p>
 <p>Si esibisce regolarmente in Italia, Francia, Svizzera, Stati Uniti e Giappone. Ha prestato servizio per il Teatro Auditorium Manzoni, la Rai e per la colonna sonora del videogioco indie "Pollo Man". Ha collaborato con Stefano Bollani, Paolo Fresu, Gabriele Mirabassi, Chick Corea e Pat Metheny.</p>
             </div>
-            <div class="column"> <img src="Guido Zanotti.png" width="300" margins="auto"></div>
+            <div class="column"> <img src="Guido Zanotti.png" width="300" margins="auto" alt="Un ritratto di Guido Zanotti in bianco e nero. Un uomo di circa cinquantacinque anni mentre suona il sassofono"></div>
           </div> 
         </div>     
         </section>    
@@ -90,45 +90,3 @@
 
 
   <footer>
-          
-    <div class="footer-info">
-      <h4>Seguici sui social</h4>
-      <a href="https://www.instagram.com/blueskiesbologna/" class="fa fa-instagram"></a>
-      <h4>Numero Telefonico: +39 333 333 333;</h4>
-      <h4> Piazza Maggiore, 1, Bologna - Casa di Riposo "Henghel Gualdi"</h4>
-      <h4>Partita IVA: IT 000 000 000 00</h4>
-      <h4> &#169; 2023-2024: Marfa Olipvc</h4>
-      </div>
-            </footer>
-    </body>
-
-    <script>
-        function myFunction() {
-          var x = document.getElementById("myTopnav");
-          if (x.className === "topnav") {
-            x.className += " responsive";
-          } else {
-            x.className = "topnav";
-          }
-        }
-
-        function reveal() {
-  var reveals = document.querySelectorAll(".reveal");
-
-  for (var i = 0; i < reveals.length; i++) {
-    var windowHeight = window.innerHeight;
-    var elementTop = reveals[i].getBoundingClientRect().top;
-    var elementVisible = 150;
-
-    if (elementTop < windowHeight - elementVisible) {
-      reveals[i].classList.add("active");
-    } else {
-      reveals[i].classList.remove("active");
-    }
-  }
-}
-
-window.addEventListener("scroll", reveal);
-
-        </script>
-</html>
