--- a/Chi Siamo.html
+++ b/Chi Siamo.html
@@ -90,3 +90,45 @@
 
 
   <footer>
+          
+    <div class="footer-info">
+      <h4>Seguici sui social</h4>
+      <a href="https://www.instagram.com/blueskiesbologna/" class="fa fa-instagram"></a>
+      <h4>Numero Telefonico: +39 333 333 333;</h4>
+      <h4> Piazza Maggiore, 1, Bologna - Casa di Riposo "Henghel Gualdi"</h4>
+      <h4>Partita IVA: IT 000 000 000 00</h4>
+      <h4> &#169; 2023-2024: Marfa Olipvc</h4>
+      </div>
+            </footer>
+    </body>
+
+    <script>
+        function myFunction() {
+          var x = document.getElementById("myTopnav");
+          if (x.className === "topnav") {
+            x.className += " responsive";
+          } else {
+            x.className = "topnav";
+          }
+        }
+
+        function reveal() {
+  var reveals = document.querySelectorAll(".reveal");
+
+  for (var i = 0; i < reveals.length; i++) {
+    var windowHeight = window.innerHeight;
+    var elementTop = reveals[i].getBoundingClientRect().top;
+    var elementVisible = 150;
+
+    if (elementTop < windowHeight - elementVisible) {
+      reveals[i].classList.add("active");
+    } else {
+      reveals[i].classList.remove("active");
+    }
+  }
+}
+
+window.addEventListener("scroll", reveal);
+
+        </script>
+</html>
