--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
     <head>
         <meta>
     <meta charset="utf-8"> <meta author="Martina Castellari"> <html lang="it"></meta>
@@ -12,10 +12,11 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=josefin+sans-regular">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=yesevaone-regular"> 
-        <style>
+    <style>
             @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;1,300&display=swap');
-          </style>
-    </head>
+     </style>
+   
+  </head>
 
     <body>
 
@@ -133,6 +134,23 @@
 }
 
 window.addEventListener("scroll", reveal);
-      
+
+function navBarFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+        x.className += " responsive";
+    } else {
+        x.className = "topnav";
+    }
+}
+
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', '<Some Property ID A>');
+gtag('config', '<Some Property ID B>');
+gtag('event', 'sign_up', { 'method': 'email' });
+gtag('event', 'view_video', { 'send_to': '<Some Property ID B>' });
         </script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=<Some Property ID A>"></script>
 </html>
