--- a/Chi Siamo.html
+++ b/Chi Siamo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
     <head>
         <meta>
     <meta charset="utf-8"></meta>
@@ -20,7 +20,7 @@
         <h2><a href="index.html"> <img src="Blue skies con testo.png" width="300"></a></h2></div>
 
         <div class="topnav" id="myTopnav">
-              <a href="index.html" class="active">Home</a>
+          <a href="index.html" class="active">Home</a>
             <a href="Chi Siamo.html">Chi siamo</a>
             <a href="#contact">Attività</a>
             <div class="dropdown">
@@ -46,7 +46,7 @@
         <h2>L'idea</h2>
         <p>Blue Skies è un progetto nato nel 2022 con lo scopo di unire due generazioni molto diverse e al contempo molto sole: i giovani e gli anziani. La Blue Skies Big Band si prefigge lo scopo anche di divulgare la musica jazz nelle generazioni più giovani.</p>
         <p>L'idea di far dialogare i ragazzi giovani con dei musicisti anziani è venuta in mente al maestro Guido Zanotti, quando visitò il padre nella casa di riposo per musicisti "H. Gualdi" e notò in lui e negli altri pazienti un pervasivo senso di solitudine, lo stesso che notò anche nei ragazzi a cui insegnava.</p>
-        <p>Nonostante sia perlopiù indirizzato ad adolescenti e a studenti universitari, chiunque può partecipare al progetto, purché abbia una buona padronanza del proprio strumento. Non sono richieste conoscenze pregresse di teoria musicale ma è comunque consigliabile saperne le basi.</p>
+        <p>Nonostante sia perlopiù indirizzato ad adolescenti e a studenti universitari, chiunque può partecipare al progetto, purché abbia una buona padronanza del proprio strumento.</p>
         <br>
 </section>
 </div>
@@ -57,13 +57,13 @@
   <div class="row">
     <div class="column">
         <br>
-        <img src="Dizionario Jazz.png" width="300" margins="auto" alt="un disegno di un grande libro stilizzato">
-    </div>
+    <h5><img src="Dizionario Jazz.png" width="300" margins="auto" alt="un disegno di un grande libro stilizzato"></h5>
+      </div>
     <div class="column">  <h2>Il corso</h2>
       <hr>
       <br>
       <p>La Blue Skies Big Band è un progetto che accoglie chiunque desideri parteciparvi, in particolar modo gli adolescenti e i giovani adulti.</p>
-<p>I musicisti si riuniscono ogni giovedì sera dalle 18 alle 19 nella Sala Polivalente della Casa di Riposo "Henghel Gualdi": il corso comprende una parte <b>pratica</b>, in cui si studiano i temi e si fa pratica d'improvvisazione e una <b>teorica</b>, in cui il Maestro Zanotti e i musicisti anziani insegnano ai ragazzi delle nozioni di teoria musicale. </p></div>
+<p>I musicisti si riuniscono ogni giovedì sera dalle 18 alle 19 nella Sala Polivalente della Casa di Riposo "Henghel Gualdi": il corso comprende una parte <b>pratica</b>, in cui si studiano i temi e si fa pratica d'improvvisazione e una <b>teorica</b>, in cui il Maestro Zanotti e i musicisti anziani insegnano ai ragazzi delle nozioni di teoria musicale. Non ne sono richieste conoscenze pregresse di ma è consigliabile saperne le basi.</p></div>
   </div> 
 </div>
 </section>   
@@ -78,12 +78,13 @@
                 <h2>Guido Zanotti</h2>
                 <hr>
                 <br>
-                <p>Nato il 4/07/1965 è figlio d'arte del cantautore popolare bolognese Alfonso Zanotti, ha cominciato gli studi di musica a quattro anni e si è diplomato con lode in tromba al conservatorio "G.B. Martini" di Bologna e ha ottenuto una borsa di studio a Berkelee, dove ebbe occasione di imparare e apprezzare la musica jazz.</p>
+                <p>Figlio d'arte del cantautore popolare bolognese Alfonso Zanotti, ha cominciato gli studi di musica presto e si è diplomato con lode in tromba al conservatorio "G.B. Martini" di Bologna e ha ottenuto una borsa di studio a Berkelee, dove ebbe occasione di imparare e apprezzare la musica jazz.</p>
 <p>Dopo aver ottenuto l'abilitazione a insegnare. Ha insegnato sassofono al Conservatorio di Ferrara, il Liceo Musicale di Parma e la scuola di musica "Diapason" di Reggio Emilia.</p>
 <p>Si esibisce regolarmente in Italia, Francia, Svizzera, Stati Uniti e Giappone. Ha prestato servizio per il Teatro Auditorium Manzoni, la Rai e per la colonna sonora del videogioco indie "Pollo Man". Ha collaborato con Stefano Bollani, Paolo Fresu, Gabriele Mirabassi, Chick Corea e Pat Metheny.</p>
             </div>
-            <div class="column"> <img src="Guido Zanotti.png" width="300" margins="auto" alt="Un ritratto di Guido Zanotti in bianco e nero. Un uomo di circa cinquantacinque anni mentre suona il sassofono"></div>
-          </div> 
+            <div class="column">
+              <h5><img src="Guido Zanotti.png" width="300" margins="auto" alt="Un ritratto di Guido Zanotti in bianco e nero. Un uomo di circa cinquantacinque anni mentre suona il sassofono"></h5></div>
+              </div> 
         </div>     
         </section>    
     <br>
@@ -129,6 +130,25 @@
 }
 
 window.addEventListener("scroll", reveal);
+
+function navBarFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+        x.className += " responsive";
+    } else {
+        x.className = "topnav";
+    }
+}
+
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', '<Some Property ID A>');
+gtag('config', '<Some Property ID B>');
+gtag('event', 'sign_up', { 'method': 'email' });
+gtag('event', 'view_video', { 'send_to': '<Some Property ID B>' });
+        </script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=<Some Property ID A>"></script>
 
         </script>
 </html>
