--- a/index.html
+++ b/index.html
@@ -145,12 +145,6 @@ function navBarFunction() {
 }
 
 window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', '<Some Property ID A>');
-gtag('config', '<Some Property ID B>');
-gtag('event', 'sign_up', { 'method': 'email' });
-gtag('event', 'view_video', { 'send_to': '<Some Property ID B>' });
-        </script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=<Some Property ID A>"></script>
+<a title="GDPR-compliant Web Analytics" href="https://clicky.com/101439014"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+<script async data-id="101439014" src="//static.getclicky.com/js"></script>
 </html>
