--- a/index.html
+++ b/index.html
@@ -144,7 +144,13 @@ function navBarFunction() {
     }
 }
 
-window.dataLayer = window.dataLayer || [];
-<a title="GDPR-compliant Web Analytics" href="https://clicky.com/101439014"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
-<script async data-id="101439014" src="//static.getclicky.com/js"></script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3813790,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 </html>
