--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
     <head>
         <meta>
-    <meta charset="utf-8"> <meta author="Martina Castellari"> <html lang="it"></meta>
+    <meta charset="utf-8"> <meta author="Martina Castellari"> <meta name="viewport" content="width=device-width, initial-scale=1.0"><html lang="it"></meta>
 
 
         <title>Blue Skies - Big Band</title>
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=josefin+sans-regular">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=yesevaone-regular"> 
     <style>
-            @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;1,300&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,300;1,400&display=swap');
      </style>
    
   </head>
@@ -27,6 +27,7 @@
             <a href="#home" class="active">Home</a>
             <a href="Chi Siamo.html">Chi siamo</a>
             <a href="#contact">Attività</a>
+            <a href="Repertorio.html">Repertorio</a>
             <div class="dropdown">
               <button class="dropbtn">Introduzione al jazz
                 <i class="fa fa-caret-down"></i>
@@ -38,17 +39,19 @@
             </div> 
             <a href="#contact">Eventi</a>
             <a href="#about">Contatti</a>
+            <a href="Documentazione.html">Documentazione</a>
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
           </div>
           
         <div class="hero-image"> 
             <div class="hero-text">
             <h1>Blue Skies Big Band</h1>
-            <h2>dal 2022, vogliamo far sorridere le persone e a unirle con la musica</h2>
+            <h2>dal 2022, vogliamo far sorridere le persone e unirle con la musica</h2>
             <br>
-            <p>Siamo un progetto che mira a favorire il dialogo intergenerazionale tra i giovani musicisti e i musicisti anziani</p>
+            <p>Come i cieli blu, siamo un progetto che mira a favorire il dialogo intergenerazionale tra i giovani musicisti e i musicisti anziani</p>
         </div>
         </div>
+        <br>
 
 <div class="container reveal">
 <section>
@@ -56,6 +59,7 @@
 <h2><q>Nel jazz invece non solo il solista crea la sua musica improvvisando su un giro armonico, ma spesso compone il tema e gli arrangiamenti. È una cosa molto diversa, e immensamente gratificante.</q></h2>
 <cite>P. Angela</cite>
 </div>
+<br>
 <br>
 
 <div class="row">
@@ -72,13 +76,15 @@
         <h3>Eventi</h3>
         <hr>
         <br>
-        <p>Periodicamente, la big band si esibisce in piccoli saggi pubblici o in eventi di beneficienza in ospedali e scuole.</p>
+        <p>Periodicamente, la big band si esibisce in piccoli saggi pubblici o in eventi di beneficenza in ospedali e scuole.</p>
         <br>
         <div class="button-column"><button>I nostri eventi futuri</button></div></div>
   </div> 
 </section>
 </div>
-
+<br>
+<hr>
+<br>
 <div class="container reveal">
   <section>
 <div id="macchina"><h1><img src="Blue skies come raggiungerci.png" style="height: 350px" alt="Un disegno di un'automobile mentre si dirige. Gli alberi hanno la forma di contrabbasso e la strada assomiglia a un pianoforte"></h1></div>
@@ -98,12 +104,12 @@
   <footer>
             <div class="footer-info">
                 <h4>Seguici sui social</h4>
-                <a href="https://www.instagram.com/blueskiesbologna/" class="fa fa-instagram"></a>
-                <h4>Numero Telefonico: +39 333 333 333;</h4>
-                <h4> Piazza Maggiore, 1, Bologna - Casa di Riposo "Henghel Gualdi"</h4>
-                <h4>Partita IVA: IT 000 000 000 00</h4>
-                <h4> &#169; 2023-2024: Marfa Olipvc</h4>
-                </div>
+                <a href="https://www.instagram.com/blueskiesbologna/"> <img src="Instagram.png" width="30px"></a>
+                <br>
+                <h4>Piazza Maggiore 1, Bologna - Casa di Riposo "Henghel Gualdi", <img src="Blue skies cornetta.png" width="20px"> +39 333 333 333</h4>
+                <h4><img src="Blue skies mail.png" width="20px"> indirizzomail@gmail.com; Partita IVA: IT 000 000 000 00</h4>
+                <h4> &#169; 2023-2024: Martina C.</h4>
+                <br>
             </footer>
     </body>
 
@@ -145,7 +151,6 @@ function navBarFunction() {
 }
 
 var _paq = window._paq = window._paq || [];
-  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
