--- a/Chi Siamo.html
+++ b/Chi Siamo.html
@@ -2,16 +2,18 @@
 <html lang="it">
     <head>
         <meta>
-    <meta charset="utf-8"></meta>
+    <meta charset="utf-8"><meta author="Martina Castellari"> <html lang="it">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </meta>
         <title>Blue Skies - Big Band</title>
         <link rel="icon" type="image/x-icon" href="Blue Skies Logo.png">
-        <link rel="stylesheet" href="foglio-stile.css">
+        <link rel="stylesheet" href="foglio-stile-chisiamo.css">
         <link rel="stylesheet" href="Blue Skies Media Queries.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=josefin+sans-regular">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=yesevaone-regular"> 
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;1,300&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,300;1,400&display=swap');
           </style>
     </head>
 
@@ -23,6 +25,7 @@
           <a href="index.html" class="active">Home</a>
             <a href="Chi Siamo.html">Chi siamo</a>
             <a href="#contact">Attività</a>
+            <a href="Repertorio.html">Repertorio</a>
             <div class="dropdown">
               <button class="dropbtn">Introduzione al jazz
                 <i class="fa fa-caret-down"></i>
@@ -34,8 +37,10 @@
             </div> 
             <a href="#contact">Eventi</a>
             <a href="#about">Contatti</a>
-            <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-          </div>
+            <a href="Documentazione.html">Documentazione</a>
+            </button>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+            </div>
 
           <div class="image"></div>
 
@@ -44,27 +49,40 @@
         <h1> Chi siamo</h1>
 
         <h2>L'idea</h2>
-        <p>Blue Skies è un progetto nato nel 2022 con lo scopo di unire due generazioni molto diverse e al contempo molto sole: i giovani e gli anziani. La Blue Skies Big Band si prefigge lo scopo anche di divulgare la musica jazz nelle generazioni più giovani.</p>
-        <p>L'idea di far dialogare i ragazzi giovani con dei musicisti anziani è venuta in mente al maestro Guido Zanotti, quando visitò il padre nella casa di riposo per musicisti "H. Gualdi" e notò in lui e negli altri pazienti un pervasivo senso di solitudine, lo stesso che notò anche nei ragazzi a cui insegnava.</p>
-        <p>Nonostante sia perlopiù indirizzato ad adolescenti e a studenti universitari, chiunque può partecipare al progetto, purché abbia una buona padronanza del proprio strumento.</p>
+        <hr>
+        <br>
+        <p>Blue Skies è un progetto nato nel 2022 con lo scopo di unire due generazioni molto diverse e al contempo molto sole: i giovani e gli anziani. La Blue Skies Big Band è un progetto che coinvolge gli studenti di numerose scuole di musica di Bologna, prefiggendosi quindi lo scopo di divulgare la musica jazz nelle generazioni più giovani.</p>
+        <br>
+        <p>L'idea di far dialogare i ragazzi giovani con dei musicisti anziani è scaturita nella mente del Maestro Guido Zanotti, quando ha visitato il padre nella casa di riposo per musicisti "H. Gualdi" e ha notato in lui e negli altri pazienti un preoccupante senso di solitudine, lo stesso che aveva intravisto in molti dei ragazzi a cui insegnava.</p>
+        <p>Nonostante il progetto sia principalmente indirizzato ad adolescenti e a studenti universitari, chiunque può farne parte, purché abbia una discreta padronanza del proprio strumento.</p>
         <br>
 </section>
 </div>
 
 <div class="container reveal">
 <section>
-
   <div class="row">
-    <div class="column">
-        <br>
-    <h5><img src="Dizionario Jazz.png" width="300" margins="auto" alt="un disegno di un grande libro stilizzato"></h5>
-      </div>
-    <div class="column">  <h2>Il corso</h2>
+    <div class="column left">
+      <h2>Benefici di un dialogo intergenerazionale</h2>
       <hr>
       <br>
-      <p>La Blue Skies Big Band è un progetto che accoglie chiunque desideri parteciparvi, in particolar modo gli adolescenti e i giovani adulti.</p>
-<p>I musicisti si riuniscono ogni giovedì sera dalle 18 alle 19 nella Sala Polivalente della Casa di Riposo "Henghel Gualdi": il corso comprende una parte <b>pratica</b>, in cui si studiano i temi e si fa pratica d'improvvisazione e una <b>teorica</b>, in cui il Maestro Zanotti e i musicisti anziani insegnano ai ragazzi delle nozioni di teoria musicale. Non ne sono richieste conoscenze pregresse di ma è consigliabile saperne le basi.</p></div>
-  </div> 
+        <section class="column-text"><p>Per l'idea generale del corso sono stati prese come modello alcune iniziative governative compiute con profitto in Francia, Paesi Bassi e Italia.</p>
+          <p>Si è dimostrato, infatti come un dialogo intergenerazionale abbia avuto effetti positivi nella psiche sia dei più giovani che dei più anziani, da unirsi a quelli che offre la pratica di uno strumento musicale.
+          <br>
+            <ul>
+             <li><p>Nei giovani è aumentato il senso di responsabilità nei confronti degli altri e una maggiore autostima.</p></li>
+             <br>
+             <li><p>Nei più anziani si è notato un notevole rallentamento del degrado cognitivo e un rinnovato senso di appartenenza alla società.</p></li>
+             </ul>
+             <br>
+             <p>In entrambi i gruppi è aumentato il grado di comprensione reciproca, nonché il senso di fiducia anche tra i membri dello stesso gruppo sociale.</p>
+      </div>
+    <div class="column right"> 
+    <h5><img src="Dizionario Jazz.png" width="300" margins="auto" alt="un disegno di un grande libro stilizzato"></h5>
+    </div>
+  </div>
+      </section>
+</div> 
 </div>
 </section>   
 </div> 
@@ -73,33 +91,31 @@
 
 <div class="container reveal">
   <section>
-        <div class="row">
-            <div class="column">
-                <h2>Guido Zanotti</h2>
-                <hr>
-                <br>
-                <p>Figlio d'arte del cantautore popolare bolognese Alfonso Zanotti, ha cominciato gli studi di musica presto e si è diplomato con lode in tromba al conservatorio "G.B. Martini" di Bologna e ha ottenuto una borsa di studio a Berkelee, dove ebbe occasione di imparare e apprezzare la musica jazz.</p>
-<p>Dopo aver ottenuto l'abilitazione a insegnare. Ha insegnato sassofono al Conservatorio di Ferrara, il Liceo Musicale di Parma e la scuola di musica "Diapason" di Reggio Emilia.</p>
-<p>Si esibisce regolarmente in Italia, Francia, Svizzera, Stati Uniti e Giappone. Ha prestato servizio per il Teatro Auditorium Manzoni, la Rai e per la colonna sonora del videogioco indie "Pollo Man". Ha collaborato con Stefano Bollani, Paolo Fresu, Gabriele Mirabassi, Chick Corea e Pat Metheny.</p>
-            </div>
-            <div class="column">
-              <h5><img src="Guido Zanotti.png" width="300" margins="auto" alt="Un ritratto di Guido Zanotti in bianco e nero. Un uomo di circa cinquantacinque anni mentre suona il sassofono"></h5></div>
-              </div> 
-        </div>     
-        </section>    
-    <br>
 
+    <div class="row">
+      <div class=" column">
+     <div class="column-images"><img src="Guido Zanotti.png" width="300" margins="auto" alt="Un ritratto di Guido Zanotti in bianco e nero. Un uomo di circa cinquantacinque anni mentre suona il sassofono"></div></div>
+      <div class="column">
+        <h2>Guido Zanotti</h2>
+        <hr>
+        <br>
+<p>Figlio d'arte del cantautore popolare bolognese Alfonso Zanotti, ha cominciato gli studi di musica presto e si è diplomato con lode in tromba al conservatorio "G.B. Martini" di Bologna e ha ottenuto una borsa di studio a Berkelee, dove ebbe occasione di imparare e apprezzare la musica jazz.</p>
+<p>Dopo aver ottenuto l'abilitazione a insegnare, ha insegnato sassofono al Conservatorio di Ferrara, il Liceo Musicale di Parma e la scuola di musica "Diapason" di Reggio Emilia.</p>
+<br>
+<p>Si esibisce regolarmente in Italia, Francia, Stati Uniti e Giappone. Ha prestato servizio per il Teatro Auditorium Manzoni, la Rai e per la colonna sonora del videogioco indie "Pollo Man". Ha collaborato con Stefano Bollani, Paolo Fresu, Gabriele Mirabassi, Chick Corea e Pat Metheny.</p>
+      </div>
+    </div> 
+</section>
 
   <footer>
           
     <div class="footer-info">
       <h4>Seguici sui social</h4>
-      <a href="https://www.instagram.com/blueskiesbologna/" class="fa fa-instagram"></a>
-      <h4>Numero Telefonico: +39 333 333 333;</h4>
-      <h4> Piazza Maggiore, 1, Bologna - Casa di Riposo "Henghel Gualdi"</h4>
-      <h4>Partita IVA: IT 000 000 000 00</h4>
-      <h4> &#169; 2023-2024: Marfa Olipvc</h4>
-      </div>
+      <a href="https://www.instagram.com/blueskiesbologna/"> <img src="Instagram.png" width="30px"></a>
+      <h4>Piazza Maggiore 1, Bologna - Casa di Riposo "Henghel Gualdi", <img src="Blue skies cornetta.png" width="20px"> +39 333 333 333</h4>
+      <h4><img src="Blue skies mail.png" width="20px"> indirizzomail@gmail.com; Partita IVA: IT 000 000 000 00</h4>
+      <h4> &#169; 2023-2024: Martina C.</h4>
+      <br>
             </footer>
     </body>
 
@@ -147,6 +163,7 @@ gtag('config', '<Some Property ID A>');
 gtag('config', '<Some Property ID B>');
 gtag('event', 'sign_up', { 'method': 'email' });
 gtag('event', 'view_video', { 'send_to': '<Some Property ID B>' });
+
         </script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=<Some Property ID A>"></script>
 
