--- a/Repertorio.html
+++ b/Repertorio.html
@@ -2,16 +2,16 @@
 <html lang="it">
     <head>
         <meta>
-    <meta charset="utf-8"><meta author="Martina Castellari"> <html lang="it"></meta>
+    <meta charset="utf-8"><meta author="Martina Castellari"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <html lang="it"></meta>
         <title>Blue Skies - Big Band</title>
         <link rel="icon" type="image/x-icon" href="Blue Skies Logo.png">
-        <link rel="stylesheet" href="foglio-stile.css">
+        <link rel="stylesheet" href="foglio-stile - Repertorio.css">
         <link rel="stylesheet" href="Blue Skies Media Queries.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=josefin+sans-regular">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=yesevaone-regular"> 
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;1,300&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,300;1,400&display=swap');
           </style>
     </head>
 
@@ -22,7 +22,7 @@
         <div class="topnav" id="myTopnav">
           <a href="index.html" class="active">Home</a>
             <a href="Chi Siamo.html">Chi siamo</a>
-            <a href="#contact">Attività</a>
+            <a href="Attività.html">Attività</a>
             <a href="Repertorio.html">Repertorio</a>
             <div class="dropdown">
               <button class="dropbtn">Introduzione al jazz
@@ -33,7 +33,7 @@
                 <a href="#">Lessico Jazz</a>
               </div>
             </div> 
-            <a href="#contact">Eventi</a>
+            <a href="Eventi.html">Eventi</a>
             <a href="#about">Contatti</a>
             <a href="Documentazione.html">Documentazione</a>
             </button>
@@ -92,11 +92,11 @@
           
     <div class="footer-info">
       <h4>Seguici sui social</h4>
-      <a href="https://www.instagram.com/blueskiesbologna/" class="fa fa-instagram"></a>
-      <h4>Numero Telefonico: +39 333 333 333;</h4>
-      <h4> Piazza Maggiore, 1, Bologna - Casa di Riposo "Henghel Gualdi"</h4>
-      <h4>Partita IVA: IT 000 000 000 00</h4>
+      <a href="https://www.instagram.com/blueskiesbologna/"> <img src="Instagram.png" width="30px"></a>
+      <h4>Piazza Maggiore 1, Bologna - Casa di Riposo "Henghel Gualdi", <img src="Blue skies cornetta.png" width="20px"> +39 333 333 333</h4>
+      <h4><img src="Blue skies mail.png" width="20px"> indirizzomail@gmail.com; Partita IVA: IT 000 000 000 00</h4>
       <h4> &#169; 2023-2024: Martina C.</h4>
+      <br>
       </div>
             </footer>
     </body>
