--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <br>
 <div class="container reveal">
   <section>
-<div id="macchina"><h1><img src="Blue skies come raggiungerci.png" style="height: 350px" alt="Un disegno di un'automobile mentre si dirige. Gli alberi hanno la forma di contrabbasso e la strada assomiglia a un pianoforte"></h1></div>
+<div id="macchina"><h1><img src="Macchina blue skies.png" style="height: 350px" alt="Un disegno di un'automobile mentre si dirige. Gli alberi hanno la forma di contrabbasso e la strada assomiglia a un pianoforte"></h1></div>
   
 <h1>Attività e Prezzi</h1>
 <hr>
