--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="topnav" id="myTopnav">   
             <a href="#home" class="active">Home</a>
             <a href="Chi Siamo.html">Chi siamo</a>
-            <a href="#contact">Attività</a>
+            <a href="Attività.html">Attività</a>
             <a href="Repertorio.html">Repertorio</a>
             <div class="dropdown">
               <button class="dropbtn">Introduzione al jazz
@@ -87,7 +87,10 @@
 <br>
 <div class="container reveal">
   <section>
-<div id="macchina"><h1><img src="Macchina blue skies.png" style="height: 350px" alt="Un disegno di un'automobile mentre si dirige. Gli alberi hanno la forma di contrabbasso e la strada assomiglia a un pianoforte"></h1></div>
+      
+<div class="center">
+    <img src="Macchina Blue Skies.png">
+</div>
   
 <h1>Attività e Prezzi</h1>
 <hr>
