--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <section>
       
 <div class="center">
-    <img src="Macchina Blue Skies.png">
+    <img src="Macchina Blue Skies.png" width="500px">
 </div>
   
 <h1>Attività e Prezzi</h1>
