--- a/Attività.html
+++ b/Attività.html
@@ -2,7 +2,7 @@
 <html lang="it">
     <head>
         <meta>
-    <meta charset="utf-8"><meta author="Martina Castellari"> <html lang="it">
+    <meta charset="utf-8"><meta author="Martina Castellari"><meta name="viewport" content="width=device-width, initial-scale=1.0"><html lang="it">
   </meta>
         <title>Blue Skies - Big Band</title>
         <link rel="icon" type="image/x-icon" href="Blue Skies Logo.png">
