--- a/Documentazione.html
+++ b/Documentazione.html
@@ -17,12 +17,12 @@
 
     <body>
       <div class="logo">
-        <h2><a href="index.html"> <img src="Blue skies con testo.png" width="300"></a></h2></div>
+        <h2><a href="index.html"> <img src="Blue skies con testo.png" width="300" alt="il logo della Blue Skies Big Band: un sole a forma di disco nascosto da una nuvola"></a></h2></div>
 
-        <div class="topnav" id="myTopnav">
-          <a href="index.html" class="active">Home</a>
+            <div class="topnav" id="myTopnav">   
+            <a href="#home" class="active">Home</a>
             <a href="Chi Siamo.html">Chi siamo</a>
-            <a href="#contact">Attività</a>
+            <a href="Attività.html">Attività</a>
             <a href="Repertorio.html">Repertorio</a>
             <div class="dropdown">
               <button class="dropbtn">Introduzione al jazz
@@ -33,12 +33,11 @@
                 <a href="#">Lessico Jazz</a>
               </div>
             </div> 
-            <a href="Eventi.html">Eventi</a>
+            <a href="#contact">Eventi</a>
             <a href="#about">Contatti</a>
             <a href="Documentazione.html">Documentazione</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-          </button>
-            </div>
+            <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+          </div>
 
           <div class="doc"></div>
 
@@ -176,7 +175,7 @@
   <div class="row">
     <div class="column">
         <br>
-        <img src="Obiettivo visual.png" height="200px">
+        <img src="Obiettivo visual.png" height="150px" style="@media screen and (max-width: 750px){display: flex; margin: 0;}">
   </div>
     <div class="column"> 
       <br>
