--- a/Attività.html
+++ b/Attività.html
@@ -69,7 +69,7 @@
   <div class="row">
     <div class="column">
         <br>
-        <img src="Biblioteca.jpg" width="500" margins="auto" alt="Una fotografia di uno scaffale in una biblioteca">
+       <div class="column-images"> <img src="Biblioteca.jpg" width="400" margins="auto" alt="Una fotografia di uno scaffale in una biblioteca"></div>
       </div>
     <div class="column">  <h2>Open Days</h2>
       <hr>
@@ -98,7 +98,7 @@
 </section>       
 </div>
             <div class="column">
-              <img src="batteria.jpg" width="500" margins="auto" alt="Una fotografia di una batteria che sta venendo suonata"> <div>
+             <div class="column-images"><img src="batteria.jpg" width="400" margins="auto" alt="Una fotografia di una batteria che sta venendo suonata"> <div></div>
               </div> 
         </div>     
         </section>    
