--- a/Documentazione.html
+++ b/Documentazione.html
@@ -81,7 +81,7 @@
    <br>
    <h3>- Struttura</h3>
 
-   <img src="Blue Skies Diagramma.jpg" alt="Il diagramma del sito Blue Skies" width="800px" class="center"> 
+   <img src="Blue Skies Diagramma.png" alt="Il diagramma del sito Blue Skies" width="800px" class="center"> 
 
 
     <h3>- Wireframe</h3>
