--- a/Repertorio.html
+++ b/Repertorio.html
@@ -57,9 +57,9 @@
     <br>
     <div class="download btn"><button><i class="fa fa-download"></i> Spartito per strumenti in Do</button> <button><i class="fa fa-download"></i> Spartito per strumenti in Si b</button></div>
     <br>
-    <h2><i>J. Coltrane</i> - Giant Steps</h2>
+    <h2><i>D. Burbeck</i> - Someday my prince will come</h2>
     <audio src="" controls></audio>
-    <p>Composto nel 1960, è un brano semplice e adatto ai principianti che vogliono cimentarsi con lo studio dell'armonia applicata alla pratica improvvisativa.
+    <p>Originariamente parte della colonna sonora del film d'animazione <i>"Biancaneve e i Sette nani"</i> del 1937, questo standard è diventato popolare una ventina d'anni più tardi nel mondo del jazz.</p>
       <br>
       <div class="download btn"><button><i class="fa fa-download"></i> Spartito per strumenti in Do</button> <button><i class="fa fa-download"></i> Spartito per strumenti in Si b</button></div>
     <br>
