--- a/Documentazione.html
+++ b/Documentazione.html
@@ -46,6 +46,8 @@
         <h1> Documentazione</h1>
 
     <h1>Abstract</h1>
+    <hr>
+    <br>
     <p>Quello della Blue Skies Big Band è un sito che favorisce un progetto sociale fittizio di integrazione sociale tra due generazioni molto diverse, spesso in aperto conflitto ma entrambe sofferenti di un pervasivo senso di solitudine, che in linea con l'ottimistico testo dello standard di Berling, si augura di appianare.
       Tramite il linguaggio duttile e libero della musica jazz, il mio sito vuole anche promuovere questo genere a chi non vi si è approcciato precedentemente, anche perché intimidito dalla sua complessità.</p>
 
@@ -88,7 +90,10 @@
 
     <div class="row">
       <div class="column"><img src="Wireframe Home.png" width="300px"></div>
-      <div class="column"><img src="Wireframe Chi Siamo.png" width="300px"></div>
+      <div class="column"><img src="Wireframe Chi Siamo.png" width="300px">
+      <hr>
+      <br>
+      <p>Ho usato questo wireframe anche per la sessione <i>"Attività".</i> </p></div>
       <div class="column"><img src="Wireframe Repertorio.png"width="300px"></div>
     </div> 
    </div>
@@ -118,7 +123,7 @@
        <img src="Blue Skies Concept Art.png" width= 300>  
        <hr>
        <br>
-     <p>Primi schizzi e studi compiuti per delineare uno stile artistico che rappresenti il sito e la sua estetica.</p>
+     <p>Primi schizzi e studi compiuti per delineare uno stile artistico che rappresenti il sito e la sua identità estetica.</p>
       </div>
  </div> 
  </div>  
@@ -134,23 +139,23 @@
   <div class="container reveal">
   <h2>Communication Strategy</h2>
   <hr>
-   <h3> 1. Background</h3>
+   <h3>- Background</h3>
    <p>Online non sono presenti molte iniziative sociali a tema musicale che proponga come servizio principale la visita di giovani ragazzi in una casa di riposo con lo scopo di una collaborazione tra loro e gli ospiti, ponendo quindi enfasi sullo scambio reciproco di idee e conoscenza e il dialogo intergenerazionale.</p>
    <p>Ciò che più vi si avvicina è la promozione di un progetto di convivenza in una RSA tra giovani e anziani promosso dall'associazione trentina "Cristiani-De Luca", il progetto "TOGETHER" ma è sprovvisto di un sito proprio e non pone centralità sul tema della musica.</p>
    <h3> 2. Obiettivi comunicativi</h3>
     <p>Durante la creazione del sito mi sono posta due obiettivi diversi: il primo raggiungimento di almeno 50 visualizzazioni da parte di altrettante persone diverse. Il secondo è il raggiungimento di 10 followers nel profilo Instagram del gruppo.</p>
     <p>L'obiettivo principale del target sono gli studenti di musica che vivono a Bologna e provincia ma sono ben accetti anche chi ha una conoscenza basilare di uno strumento musicale qualsiasi.</p>
    
-    <h2> 3. Target audience e messaggio</h2>
+    <h2> Target audience e messaggio</h2>
     <hr>
     <br>
    
-   <h3>1. Target audience</h3>
+   <h3>-Target audience</h3>
  <br>
    <p>Nonostante il bacino di utenti del mio sito coinvolga chiunque voglia unirsi al progetto, esso si rivolge principalmente a un target di adolescenti e giovani adulti (massimo 30 anni) che studiano musica, un pubblico che fa un uso massiccio di social network ed è molto sensibile all'arte e ai temi sociali.</p>
     <p>Il target secondario sono gli adulti neopensionati che vogliono riprendere la pratica del proprio strumento. </p>
    
-    <h3>2. Quale messaggio trasmette il sito?</h3>
+    <h3>-Quale messaggio trasmette il sito?</h3>
     <br>
     <p>Il sito della Blue Skies Big Band vuole trasmettere la concezione di musica come un'entità estremamente libera, duttile, adatta a tutti. Qui viene specificatamente applicata come collante sociale, facendo sensibilizzazione e cercando quindi di attenuare l'incomprensione e la solitudine reciproca sentita dalle fasce più giovani e più anziane della popolazione.</p>
      <p>Un potenziale ostacolo per la comunicazione può essere il crescente calo d'interesse dei potenziali utenti</p>
