--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1>Blue Skies Big Band</h1>
             <h2>dal 2022, vogliamo far sorridere le persone e unirle con la musica</h2>
             <br>
-            <p>Come i cieli blu, siamo un progetto che mira a favorire il dialogo intergenerazionale tra i giovani musicisti e i musicisti anziani</p>
+            <p>Ispirati dai cieli azzurri, siamo un progetto che mira a favorire un dialogo sereno tra i giovani studenti e i musicisti anziani a ritmo di jazz.</p>
         </div>
         </div>
         <br>
@@ -70,13 +70,13 @@
         <br>
         <p>Fondato nel 2022, il gruppo Blue Skies vede l'incontro di adolescenti e giovani adulti con i residenti della casa di riposo <quote>Henghel Gualdi</quote>. Il nostro progetto mira a far dialogare delle generazioni diverse, accomunate dalla passione per la musica jazz e dal desiderio di conoscerla e praticarla.</p>
         <br>
-        <div class="button-column"><button>Scopri le nostre attività</button></div></div>
+        <div class="button-column"><button><a href="attività.html">Scopri le nostre attività</button></div></div>
     <div class="column">
         <img src="pianola.png" width="300px" alt="un pianoforte elettrico sta venendo suonato da delle mani di un uomo adulto">
         <h3>Eventi</h3>
         <hr>
         <br>
-        <p>Periodicamente, la big band si esibisce in piccoli saggi pubblici o in eventi di beneficenza in ospedali e scuole.</p>
+        <p>Periodicamente, la big band apre le proprie porte nei propri Open Days o si esibisce in saggi pubblici o in eventi di beneficenza in scuole e ospedali.</p>
         <br>
         <div class="button-column"><button>I nostri eventi futuri</button></div></div>
   </div> 
